feat: add html link

--- a/Overconfidence Report.ipynb
+++ b/Overconfidence Report.ipynb
@@ -20,14 +20,34 @@
    "source": [
     "## Table of Contents\n",
     "\n",
-    "[Introduction](#Introduction)\n",
-    "\n",
-    "[Data Source](#Data)\n",
-    "\n",
-    "[Section 1](#Section_1)\n",
-    "\n",
-    "[Section 2](#Section_2)\n",
-    "\n",
+    "[Introduction](#Introduction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Data Source](#Data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Section 1](#Section_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Section 2](#Section_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[Section 3](#Section_3)"
    ]
   },
@@ -63,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/eqn.png\" width=800 height=100 />"
+    "<img src=\"images/eqn.png\"/>"
    ]
   },
   {
@@ -108,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/BLS_stats.PNG\" width=800 height=800 />"
+    "<img src=\"images/BLS_stats.PNG\"/>"
    ]
   },
   {
@@ -153,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/Perceived_Skill_Group_Lim_v_Unlim.png\" width=800 height=500 />"
+    "<img src=\"images/Perceived_Skill_Group_Lim_v_Unlim.png\" />"
    ]
   },
   {
@@ -167,14 +187,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/Perceived_Skill_Set_Seed_1.png\" width=800 height=800 />"
+    "<img src=\"images/Perceived_Skill_Set_Seed_1.png\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/Perceived_Skill_Set_Seed_2.png\" width=800 height=800 />"
+    "<img src=\"images/Perceived_Skill_Set_Seed_2.png\"/>"
    ]
   },
   {
@@ -197,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/Perceived_Skill_Group_Non_Entre.png\" width=1500 height=1500 />"
+    "<img src=\"images/Perceived_Skill_Group_Non_Entre.png\"/>"
    ]
   },
   {
@@ -227,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/Perceived_Skill_Group_10_Year_Intervals.png\" width=800 height=800 />"
+    "<img src=\"images/Perceived_Skill_Group_10_Year_Intervals.png\"/>"
    ]
   },
   {
